--- a/wrangler.toml
+++ b/wrangler.toml
@@ -11,9 +11,8 @@ crons = []
 enabled = true
 
 [[kv_namespaces]]
-binding = "KV_API_KEYS"
-id = "61039c5a8d514a25b5df8a3da3845285"
-
-[[kv_namespaces]]
 binding = "KV_PROXY"
 id = "86af15cd5a96445e921618842e38abd8"
+
+[vars]
+AUTH_WORKER_URL = "https://nwita-authorization.samloupro.workers.dev"
